@@ -20,8 +20,12 @@
 # 4014-08-17: added calls to requireNamespace() and :: where necessary. J. Fox
 # 2015-01-27 .carEnv now in global environment. John
 # 2015-02-20: fixed coding error in Boot.nls(). John
+# 2017-06-12: added a default for f in the generic method to suppress an error generated by Rstudio
+# 2017-07-22: added a vcov.boot method that simply returns cov(object$t)
+# 2017-07-22: fixed args to hist.boot as suggested by Achim Zeileis
+# 2017-07-22: Fixed bugs in Boot.default; updated .Rd file as suggested by Achim Zeileis
 
-Boot <- function(object, f, labels, R=999, method){UseMethod("Boot")}
+Boot <- function(object, f=coef, labels, R=999, method){UseMethod("Boot")}
 
 Boot.default <- function(object, f=coef, labels=names(coef(object)),
                      R=999, method=c("case", "residual")) {
@@ -33,32 +37,35 @@ Boot.default <- function(object, f=coef, labels=names(coef(object)),
      boot.f <- function(data, indices, .fn) {
       assign(".boot.indices", indices, envir=.carEnv)
       mod <- update(object, subset=get(".boot.indices", envir=.carEnv))
-      if(mod$qr$rank != object$qr$rank){
-            out <- .fn(object)
-            out <- rep(NA, length(out)) } else  {out <- .fn(mod)}
+      if(!is.null(object$qr)){
+         if(mod$qr$rank != object$qr$rank){
+               out <- .fn(object)
+               out <- rep(NA, length(out)) } else  {out <- .fn(mod)}}
      out
      }
     } else {
     boot.f <- function(data, indices, .fn) {
       first <- all(indices == seq(length(indices)))
-      res <- if(first) object$residuals else
+      res <- if(first) residuals(object, type="pearson") else
                   residuals(object, type="pearson")/sqrt(1 - hatvalues(object))
       res <- if(!first) (res - mean(res)) else res
       val <- fitted(object) + res[indices]
       if (!is.null(object$na.action)){
             pad <- object$na.action
-            attr(pad, "class") <- "exclude" 
+            attr(pad, "class") <- "exclude"
             val <- naresid(pad, val)
             }
       assign(".y.boot", val, envir=.carEnv)
       mod <- update(object, get(".y.boot", envir=.carEnv) ~ .)
-      if(mod$qr$rank != object$qr$rank){
-            out <- .fn(object)
-            out <- rep(NA, length(out)) } else  {out <- .fn(mod)}
+      if(!is.null(object$qr)){
+         if(mod$qr$rank != object$qr$rank){
+               out <- .fn(object)
+               out <- rep(NA, length(out)) } else  {out <- .fn(mod)}}
       out
       }
-  } 
-  b <- boot::boot(data.frame(update(object, model=TRUE)$model), boot.f, R, .fn=f)
+  }
+#  b <- boot::boot(data.frame(update(object, model=TRUE)$model), boot.f, R, .fn=f)
+  b <- boot::boot(data.frame(object$model), boot.f, R, .fn=f)
   colnames(b$t) <- labels
   if(exists(".y.boot", envir=.carEnv))
      remove(".y.boot", envir=.carEnv)
@@ -66,11 +73,11 @@ Boot.default <- function(object, f=coef, labels=names(coef(object)),
      remove(".boot.indices", envir=.carEnv)
   b
   }
-  
+
 Boot.lm <- function(object, f=coef, labels=names(coef(object)),
                      R=999, method=c("case", "residual"))
    Boot.default(object, f, labels, R, method)
-  
+
 Boot.glm <- function(object, f=coef, labels=names(coef(object)),
                      R=999, method=c("case", "residual")) {
   method <- match.arg(method)
@@ -81,7 +88,7 @@ Boot.glm <- function(object, f=coef, labels=names(coef(object)),
   your own version of residual bootstrap for a glm.")
    }
   }
-  
+
 Boot.nls <- function(object, f=coef, labels=names(coef(object)),
                      R=999, method=c("case", "residual")) {
   if(!(requireNamespace("boot"))) stop("The 'boot' package is missing")
@@ -167,7 +174,7 @@ print.confint.boot <- function(x, ...) {
   }
 
 
-summary.boot <- function (object, parm, high.moments = FALSE, 
+summary.boot <- function (object, parm, high.moments = FALSE,
     extremes=FALSE, ...)
 {
     cl <- match.call()
@@ -207,7 +214,7 @@ summary.boot <- function (object, parm, high.moments = FALSE,
     parm <- if(missing(parm)) 1:dim(stats)[1] else parm
     return(stats[parm , use])
 }
-print.summary.boot <- 
+print.summary.boot <-
    function(x, digits = max(getOption("digits") - 2, 3), ...)
 {
     print.data.frame(x, digits=digits, ...)
@@ -217,7 +224,7 @@ hist.boot <- function(x, parm, layout=NULL, ask, main="", freq=FALSE,
       estPoint = TRUE, point.col="black", point.lty=2, point.lwd=2,
       estDensity = !freq, den.col="blue", den.lty=1, den.lwd=2,
       estNormal = !freq,  nor.col="red",   nor.lty=2, nor.lwd=2,
-      ci=c("bca", "none", "percentile"), level=0.95,
+      ci=c("bca", "none", "perc"), level=0.95,
       legend=c("top", "none", "separate"), box=TRUE, ...){
   not.aliased <- which(!is.na(x$t0))
   ci <- match.arg(ci)
@@ -238,7 +245,7 @@ hist.boot <- function(x, parm, layout=NULL, ask, main="", freq=FALSE,
             oma=c(0, 0, oma3, 0), mar=c(5, 4, 1, 2) + .1)
     on.exit(par(op))
     }
-  if(ci != "none") clim <- confint(x, method=ci, level=level)
+  if(ci != "none") clim <- confint(x, type=ci, level=level)
   pn <- colnames(x$t)
   names(pn) <- pn
   what <- c(estNormal & !freq, estDensity & !freq, ci != "none", estPoint)
@@ -296,6 +303,8 @@ hist.boot <- function(x, parm, layout=NULL, ask, main="", freq=FALSE,
   }
   invisible(NULL)
   }
-  
 
-  
+vcov.boot <- function(object, ...){cov(object$t)}
+
+
+
